app/assets/stylesheets/custom.scss
@import "semantic-ui";
@import "font-awesome";
@import url('https://fonts.googleapis.com/css?family=Open+Sans%7CRoboto');

@import url('https://fonts.googleapis.com/css?family=Baloo');

/*** Variables ***/
/* colors */
$sunshine: #FFD700;
$steel-blue: #2A779B;

// Le Chat colors
$bone: #f8f1e5;
$coal: #374341;
$off_white: #2f3131;
$white: #dddddd;
$black: #000000;

$greymane: #bdbdbd;

$purp: #9701aa;
$indigo: #320056;
$dk_orchid: #9932CC;


/* Fonts */
$logo-font: 'Baloo', cursive;
$heading-font: 'Open sans', sans-serif;
$body-font: 'Roboto', sans-serif;


body {
	background-color: $indigo;
	font-family: $body-font;
}

.chatcat {
	width: 5%;
}

.main {
	margin-bottom: 50px;
}

.images img {
	border: 2px solid $greymane;
}

.chat-panel {
	color: #000000;
	background-color: $purp;
}

.my-link {
	color: $sunshine;
}

.jumbotron {
	font-family: $logo-font;
	font-size: 4em;
	color: $purp;
}

.instructions {
	color: $purp;
}

a {
	color: inherit;
}

.logo {
	color: $sunshine;
	font-family: $logo-font;
}

a.logo:hover {
  color: $dk_orchid;
}

.left-sidebar {

	h3 {
		color: $greymane;
		padding: 10px 5px 0px;
	}

	text-align: center;

	.ui.accordion {
		margin:	15px 3px 5px;
	}
	.menu {
		width: 100% !important;
	}
}


/**** Typography ****/
h1, h2, h3, h4, h5, h6 {
	// color: $greymane;
	font-family: $heading-font;
}

header {
	display: flex;
  align-items: center;
	background: $purp;
	height: 90px;
	padding: 2%;
	margin-bottom: 2.5%;
}

.my-form {
	background: $purp;
	border-radius: 1%;
	padding: 2%;
	margin: 2%;
}

footer {
  background: $purp;
  text-align: center;
	padding: 1.3%;
  height: 50px;
  display: flex;
  align-items: center;
	position: fixed;
	width: 100%;
	bottom: 0px;
}

i {
	color: $sunshine;
}

.user-profile i {
	color: #000000;
}

.menu-title {
	font-family: $logo-font;
	color: $sunshine;
}

/*** Chat ***/

.chat {

	h2 {
		color: $black;
	}
	.message-view {
		padding: 5 20px;
		height: 37vh;
		overflow-y: scroll;
	}
	.message-input {
		input {
			display: none;
		}
	}
}

